# automated-leetcode-prep-on-AWS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aws-athena/: athena_setup.md  queries.sql
aws-emr/: emr_setup.md  spark_job.py
aws-glue/: glue_job.py  glue_job_config.json
aws-lambda/: lambda-config.json  lambda_handler.py
aws-lambda/deployment/: deploy.sh
aws-redshift/: copy_commands.sql  create_tables.sql
aws-s3/: README.md  bucket_policy.json  lifecycle_policy.json
aws-step-functions/: state_machine_definition.json  step_functions_setup.md
data/fixtures/: README.md  leetcode_api_response.json
leetcode-scraper/: config.json  requirements.txt  scraper.py
scripts/: run.sh  verify.sh
src/automated_leetcode_prep/: __init__.py  artifacts.py  athena.py  cli.py  config.py  emr.py  glue_job.py  lambda_transformer.py  models.py  pipeline.py  redshift.py  scraper.py  step_functions.py  storage.py
tests/: test_analytics.py  test_glue_job.py  test_lambda_transformer.py  test_pipeline.py  test_scraper.py
